--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~6.0.0",
+    "cors": "^2.8.4",
+    "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.0.3"
   },
   "devDependencies": {
