--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "element-ui": "^2.4.8",
     "firebase": "^5.5.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
@@ -25,6 +26,7 @@
     "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "element-theme-chalk": "^2.4.8",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "vue-loader": "^15.4.2",
