--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ yarn-error.log*
 # Private files
 private.js
 functions/fir-fe3bb-firebase-adminsdk-8h07s-b0f1526a03.json
+
+# Firebase
+firebase-debug.log
